<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/medium_space"
    app:cardCornerRadius="@dimen/medium_space"
    app:cardElevation="@dimen/small_space">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/productIdTextView"
            style="@style/BoldFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_space"
            android:padding="@dimen/small_space"
            android:textSize="@dimen/large_text_size"
            tools:text="@string/product_id" />

        <TextView
            android:id="@+id/colorTextView"
            style="@style/BoldFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_space"
            android:padding="@dimen/small_space"
            android:textSize="@dimen/large_text_size"
            tools:text="@string/color" />

        <TextView
            android:id="@+id/sizeTextView"
            style="@style/BoldFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_space"
            android:padding="@dimen/small_space"
            android:textSize="@dimen/large_text_size"
            tools:text="@string/size" />

        <TextView
            android:id="@+id/priceTextView"
            style="@style/BoldFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_space"
            android:padding="@dimen/small_space"
            android:textSize="@dimen/large_text_size"
            tools:text="@string/price" />
    </LinearLayout>

</android.support.v7.widget.CardView>