<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <include layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_50dp"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/BoldFont"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/medium_space"
                    android:text="@string/categories"
                    android:textSize="@dimen/title_text_size" />

                <TextView
                    android:id="@+id/categoryAllTextView"
                    style="@style/BoldFont"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="end"
                    android:padding="@dimen/medium_space"
                    android:text="@string/view_all"
                    android:textSize="@dimen/title_text_size" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/categoriesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_space" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/BoldFont"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/medium_space"
                    android:text="@string/most_viewed"
                    android:textSize="@dimen/title_text_size" />

                <TextView
                    android:id="@+id/viewedAllTextView"
                    style="@style/BoldFont"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="end"
                    android:padding="@dimen/medium_space"
                    android:text="@string/view_all"
                    android:textSize="@dimen/title_text_size" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mostViewedRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_space" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/BoldFont"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/medium_space"
                    android:text="@string/most_shared"
                    android:textSize="@dimen/title_text_size" />

                <TextView
                    android:id="@+id/sharedAllTextView"
                    style="@style/BoldFont"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="end"
                    android:padding="@dimen/medium_space"
                    android:text="@string/view_all"
                    android:textSize="@dimen/title_text_size" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mostSharedRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_space" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/BoldFont"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/medium_space"
                    android:text="@string/most_ordered"
                    android:textSize="@dimen/title_text_size" />

                <TextView
                    android:id="@+id/orderedAllTextView"
                    style="@style/BoldFont"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="end"
                    android:padding="@dimen/medium_space"
                    android:text="@string/view_all"
                    android:textSize="@dimen/title_text_size" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mostOrderedRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_space" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/progressContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/progress_gradient"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
